Dashboard, alignment issue resolved

--- a/src/app/modules/dashboard/team-report-dashboard/team-report-dashboard.component.scss
+++ b/src/app/modules/dashboard/team-report-dashboard/team-report-dashboard.component.scss
@@ -327,6 +327,8 @@
   display: inline-flex;
   justify-content: right;
   gap:10px;
+  border-top: 1px solid #cacaca;
+  padding-top: 20px;
 }
 
 .dwldBtn-1{
@@ -379,10 +381,10 @@
 }
 .new-table-container{
   background: #FBFBFB;
-  margin-right: 50px;
-  margin-top: 50px;
-  margin-left: 50px;
-  margin-bottom: 40px;
+  margin-right: 30px;
+  margin-top: 25px;
+  margin-left: 30px;
+  margin-bottom: 25px;
 }
 
 .txtH-1{
